new Integer => Integer.valueOf