@@ -224,9 +224,10 @@ class Wrapper02 {
     }
     public class Wrapper03 {
         public static void main(String[] args) {
-            Integer num1 = new Integer(10);
-            Integer num2 = new Integer(20);
-            Integer num3 = new Integer(10);
+//            아래의 Integer.valueOf == interface 예제
+            Integer num1 = Integer.valueOf(20);
+            Integer num2 = Integer.valueOf(20);
+            Integer num3 = Integer.valueOf(10);
 
             System.out.println(num1 < num2);       // true
             System.out.println(num1 == num3);      // false
